@@ -5605,3 +5605,4 @@ v0.92.0.11:
   - Add Nation#getMutualAllies() and Nation#hasMutualAlly() from SiegeWar.
   - API: add king and mayor UUIDs to the DeleteNationEvent & DeleteTownEvent.
   - Add some Time methods from SiegeWar.
+  - Format for colour codes when retrieving TownyEconomyHandler#getFormattedBalance().
